<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="match_parent">
<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_item_title" android:textStyle="bold" android:lines="1" android:textSize="25sp">
</TextView>
<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:hint="Enter Name Here" android:password="false" android:layout_width="fill_parent" android:inputType="textCapWords" android:lines="1" android:layout_centerVertical="true" android:layout_below="@+id/TextView01">
</EditText>


<CheckBox android:id="@+id/CheckBox01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_time" android:layout_below="@+id/EditText01" android:layout_centerHorizontal="true"></CheckBox><Button android:id="@+id/Button02" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_alignParentRight="true" android:layout_width="wrap_content" android:layout_below="@+id/CheckBox01">
</Button><Button android:id="@+id/Button01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/add_item" android:layout_toLeftOf="@+id/Button03" android:layout_below="@+id/CheckBox01">
</Button><Button android:id="@+id/Button03" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/Button02" android:text="@string/add_another" android:layout_width="wrap_content" android:layout_below="@+id/CheckBox01"></Button>

</RelativeLayout>
